added dashboard and some content for it, added create trip page, change the create trip endpoint in backend

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch src --exec tsx src/index.ts",
-    "debug": "nodemon --watch src --exec tsx --inspect src/index.ts",
+    "debug": "node --inspect-brk -r tsx/cjs src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
