--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,23 +1,29 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-
   "version": "0.2.0",
   "configurations": [
     {
-        "name": "Debug with Nodemon",
-        "type": "node",
-        "request": "launch",
-        "program": "${workspaceFolder}/node_modules/nodemon/bin/nodemon.js",
-        "args": ["--exec", "ts-node", "src/server.ts"],
-        "env": {
-            "NODE_ENV": "development"
-        },
-        "restart": true,
-        "console": "integratedTerminal"
-        
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Compiled ESM",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/server/dist/index.js",
+      "outFiles": ["${workspaceFolder}/server/dist/**/*.js"],
+      "sourceMaps": true,
+      "console": "integratedTerminal",
+      "cwd": "${workspaceFolder}/server"
+    },
+    {
+      "name": "Debug Client",
+      "type": "chrome",
+      "request": "launch",
+      "url": "http://localhost:5173",
+      "webRoot": "${workspaceFolder}/client",
+      "sourceMaps": true,
+      "sourceMapPathOverrides": {
+        "/@fs/*": "*",
+        "webpack:///./~/*": "${webRoot}/node_modules/*",
+        "webpack:///./src/*": "${webRoot}/src/*"
+      }
     }
   ]
-
 }
