--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "yup": "^1.7.0"
   },
