--- a/server/package.json
+++ b/server/package.json
@@ -16,14 +16,17 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@types/connect-pg-simple": "^7.0.3",
     "bcrypt": "^6.0.0",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
