--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/client": "^6.13.0",
     "@types/connect-pg-simple": "^7.0.3",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
