--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -52,5 +52,5 @@
     ],
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "build"]
 }
