--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -35,6 +36,7 @@
     "@types/express-session": "^1.18.2",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.13.0",
     "tsx": "^4.20.3",
