--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+  "overrides": {
+    "lucide-react": {
+      "react": "^19.1.0",
+      "react-dom": "^19.1.0"
+    }
+  },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
-    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
@@ -28,7 +33,7 @@
     "react-router-dom": "^7.7.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
-    "yup": "^1.7.0"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -40,7 +45,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
