--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "@vis.gl/react-google-maps": "^1.5.5",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
     "lucide-react": "^0.263.1",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.1",
