--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "currency-symbol-map": "^5.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "lucide-react": "^0.263.1",
