--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "currency-codes": "^2.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
