--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^8.0.0",
     "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
